# agent-data-fabric

./: .gitignore  CLAUDE.md  LICENSE  README.md  console.bat  console.sh  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  self-check.yml
docs/: architecture.md
evidence/: schema.sql
examples/: README.md  junit.xml  playwright-results.json  pytest.json
reliability/: __init__.py  __main__.py  cli.py  console.py  runners.py
reliability/adapters/: __init__.py  base.py  junit.py  playwright.py  pytest.py
reliability/analysis/: __init__.py  flakiness.py  reliability.py  trends.py
reliability/reports/: __init__.py  cli_report.py
reliability/storage/: __init__.py  database.py  models.py  schema.sql
reliability/utils/: __init__.py  text.py
scripts/: home.py  ingest.ts  self_check.py  stats.ts
tests/: test_junit.py  test_pipeline.py  test_runners.py
tests/fixtures/: run-2026-07-01.json  run-2026-07-02.json  run-2026-07-03.json  run-2026-07-04.json
