[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-reliability-intelligence"
version = "0.1.0"
description = "Local-first, framework-agnostic test-suite reliability history and analysis."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
# Core is stdlib-only on purpose: sqlite3, json, argparse, hashlib all ship
# with Python. Nothing to install, nothing phones home.
dependencies = []

[project.optional-dependencies]
# Tooling for contributors. None of this is needed to *run* the tool.
dev = ["pytest>=7", "ruff>=0.5", "pyright>=1.1"]

[project.scripts]
# Installs a `reliability` command that calls reliability.cli:main
reliability = "reliability.cli:main"

[tool.setuptools]
packages = [
  "reliability",
  "reliability.adapters",
  "reliability.analysis",
  "reliability.storage",
  "reliability.reports",
  "reliability.utils",
]

[tool.setuptools.package-data]
# The schema is loaded at runtime, so ship it inside the package.
"reliability.storage" = ["schema.sql"]
# PEP 561 marker: advertise that this package ships inline type information.
"reliability" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Make `reliability` importable when running `pytest` from the repo root
# without requiring an editable install first.
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# pycodestyle (E), pyflakes (F), isort (I), pyupgrade (UP), bugbear (B).
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
# The whole package is kept strict-clean; CI and editors should enforce that.
include = ["reliability", "tests", "scripts"]
typeCheckingMode = "strict"
pythonVersion = "3.9"
